	simple elisp files.
	Add explanation to die when compiling lisp files fails.
	Add documentation so that man page can be generated.

	* xemacs-elisp-common.eclass: Quote all instances of $@ and $*.
	Use singular autoload in function name to keep interface the same
	as for GNU Emacs.
	Add documentation so that man page can be generated.

2007-09-08  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (SIMPLE_ELISP, DOCS, NEED_EMACS): Add man comments.

	* elisp-common.eclass (elisp-site-file-install): Remove redundant
	cp and pushd/popd commands.
	(elisp-compile, elisp-comp, elisp-install): Quote all instances of
	$@ and $*. Don't use ${status}; it is reserved in zsh.
	(EMACS_BATCH_CLEAN): New variable, analog to the XEmacs eclasses.

2007-08-21  Christian Faulhammer  <opfer@gentoo.org>

	* elisp-common.eclass (SITEFILE): add a trailing slash in comment
	for regeneration to make clear it is a directory, not a single file

2007-07-28  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (S): Remove trailing slant.

2007-07-12  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Use einfon for the
	initial message; suppress the newline in case of no changes;
	update einfo message.

2007-07-11  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass: Add magic comments for man page generation.
	(SITEFILE): Default value.

2007-07-08  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Put proper header
	information in site-gentoo.el. Consistent BE spelling.
	Remove -b option from mv since it does not work on BSD.

2007-07-03  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass: Update copyright info. Some comment changes.

	* elisp-common.eclass: Update copyright info.

2007-07-03  Christian Faulhammer  <opfer@gentoo.org>

	* elisp.eclass: Add RDEPEND line

2007-07-02  Christian Faulhammer  <opfer@gentoo.org>

	* elisp.eclass: Moved to Portage

	* elisp-common.eclass: Moved to Portage
